--- a/web/index.html
+++ b/web/index.html
@@ -25,8 +25,61 @@
 
   <title>jaeheee_github_io</title>
   <link rel="manifest" href="manifest.json">
+
+  <style>
+    body {background-color: #000000;}
+  
+      .loading {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+      }
+
+    .loader {
+      display: inline-block;
+      width: 80px;
+      height: 80px;
+      position: relative;
+      border: 3px solid #EEEEEE;
+      animation: loader 2s infinite ease;
+    }
+    .loader-inner {
+      vertical-align: top;
+      display: inline-block;
+      width: 100%;
+      background-color: #0F4C75;
+      animation: loader-inner 1s infinite ease-in;
+    }
+    @keyframes loader {
+      0% { transform: rotate(0deg);}
+      25% { transform: rotate(180deg);}
+      50% { transform: rotate(180deg);}
+      75% { transform: rotate(360deg);}
+      100% { transform: rotate(360deg);}
+    }
+    @keyframes loader-inner {
+      0% { height: 0%;}
+      25% { height: 0%;}
+      50% { height: 100%;}
+      75% { height: 100%;}
+      100% { height: 0%;}
+    }
+  </style>
+
 </head>
 <body>
+  <div class="loading">
+    <!-- <div class="loader"></div> -->
+    <span class="loader">
+      <span class="loader-inner"></span>
+    </span>
+  </div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
